e
Chessboard.cpp: In member function ‘ChessPiece Chessboard::at(int, int)’:
Chessboard.cpp:84:38: error: ‘logic_error’ was not declared in this scope
   throw logic_error("Not valid Index");
                                      ^
